# safe-cli

./: .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile.build  Jenkinsfile  Makefile  README.md  log.toml
.github/workflows/: benchmark.yml  fake-master-pr.yml  master.yml  network-test.yml  pr.yml  remove-me-pr.yml
jsonrpc-quic/: Cargo.toml  client_endpoint.rs  quic_client.rs
qjsonrpc/: Cargo.toml
qjsonrpc/examples/async_server/: main.rs  query.rs  response.rs
qjsonrpc/src/: client_endpoint.rs  jsonrpc.rs  lib.rs
resources/: notarize.sh  package-deploy-artifacts.sh
resources/test-scripts/: all-tests  api-tests  cli-tests  e2e-authd-vault-tests  install-vault-and-authd  run-auth-daemon  run-baby-and-authd  run-vault-and-authd
safe-api/: Cargo.toml
safe-api/src/api/: authd_client_api.rs  (+1 more)
safe-authd/: Cargo.toml  authd.rs  operations_win.rs
safe-authd/requests/: create_acc.rs  log_in.rs  status.rs
safe-cli/: Cargo.toml  README.md  cli.rs
safe-cli/benches/: benches.rs
safe-cli/operations/: auth_and_connect.rs  auth_daemon.rs  mod.rs
safe-cli/subcommands/: auth.rs  cat.rs  dog.rs  files.rs  files_get.rs  helpers.rs  keys.rs  mod.rs  nrs.rs  seq.rs  wallet.rs
safe-cli/tests/: cli_cat.rs  cli_dog.rs  cli_files.rs  cli_files_get.rs  cli_wallet.rs
safe-cmd-test-utilities/src/: lib.rs
safe-ffi/: Cargo.toml  lib.rs
safe-ffi/ffi/: constants.rs  fetch.rs  ffi_structs.rs  files.rs  logging.rs  mod.rs  nrs.rs
safe_cli/subcommands/: cat.rs
sn_api/: Cargo.toml
sn_api/examples/: file_upload.rs
sn_authd/: Cargo.toml  authd.rs  errors.rs  main.rs  notifs.rs  operations.rs
sn_cli/: Cargo.toml  README.md  cli.rs
sn_cli/operations/: auth_daemon.rs  config.rs  helpers.rs  node.rs
sn_cli/subcommands/: auth.rs  cat.rs  config.rs  dog.rs  files.rs  mod.rs  node.rs  seq.rs  wallet.rs  xorurl.rs
sn_cli/tests/: cli_cat.rs  cli_files.rs  cli_files_get.rs  cli_seq.rs
sn_cmd_test_utilities/src/: lib.rs
sn_entropy/: Cargo.toml
sn_entropy/src/: lib.rs  main.rs
src/: cli.rs  lib.rs  lib_helpers.rs  main.rs  safe_client_libs.rs  scl_mock.rs
src/api/: auth.rs  fetch.rs  files.rs  keys.rs  mod.rs  nrs.rs  safe_client_libs.rs  scl_mock.rs  wallet.rs
src/app/: mod.rs  safe_client.rs
src/authenticator/: mod.rs
src/commands/: global.rs  mod.rs
src/subcommands/: cat.rs  fake_auth.rs  files.rs  keys.rs  nrs.rs  wallet.rs
tests/: cli_files.rs  cli_wallet.rs
tests/common/: mod.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
(+39 files in other folders)
