[package]
name = "safe-utilities"
version = "0.1.0"
description = "SAFE CLI Test and benchmark utilities"
authors = ["bochaco <gabrielviganotti@gmail.com>", "Josh Wilson <joshuef@gmail.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/safe-api"
edition = "2018"
# include = ["Cargo.toml", "src/lib.rs"]



[dependencies]
env_logger = "0.6.0"
envy = "0.4.0"
human-panic = "1.0.1"
log = "0.4.6"
rand = "0.6.5"
relative-path = "0.4.0"

# [features]
# mock-network = ["safe-api/mock-network"]
# fake-auth = ["safe-api/fake-auth"]
# scl-mock = ["safe-api/scl-mock"]

# [dependencies.safe-api]
# path = "../safe-api"
# default-features = false
# features = ["app", "authd_client"]
